Potential fix video on Mobile 2

--- a/main.css
+++ b/main.css
@@ -62,6 +62,7 @@ img.round-corner{
 
 video {
     border-radius: 24px;
+    object-fit: fill;
 }
 
 .window {
